Replace FindResult with PathNode usage